fix z-indexes

--- a/src/ui/styles/components/timeline/timelineblock.scss
+++ b/src/ui/styles/components/timeline/timelineblock.scss
@@ -6,7 +6,7 @@
   text-overflow: ellipsis;
 
   &:hover {
-    z-index: 999;
+    z-index: 10;
     overflow: visible;
   }
 
