--- a/src/ui/styles/components/timeline/timelinetrigger.scss
+++ b/src/ui/styles/components/timeline/timelinetrigger.scss
@@ -8,7 +8,7 @@
   cursor: ew-resize;
   
   &:hover {
-    z-index: 999;
+    z-index: 10;
     overflow: visible;
   }
 
