--- a/src/ui/styles/components/timeline/timelinewrapper.scss
+++ b/src/ui/styles/components/timeline/timelinewrapper.scss
@@ -6,7 +6,7 @@
 }
 
 .timelineCursorTracker {
-  z-index: 1000;
+  z-index: 5;
   width: 1px;
   height: 100%;
   position: absolute;
